--- a/pages/zh_cn/cn.html
+++ b/pages/zh_cn/cn.html
@@ -5,12 +5,19 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link 
-          rel="stylesheet" 
-          href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css" 
-          integrity="sha512-KfkfwYDsLkIlwQp6LFnl8zNdLGxu9YAA1QvwINks4PhcElQSvqcyVLLD9aMhXd13uQjoXtEKNosOWaZqXgel0g==" 
-          crossorigin="anonymous" 
-          referrerpolicy="no-referrer" 
-    />
+        rel="stylesheet" 
+        href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css" 
+        integrity="sha512-KfkfwYDsLkIlwQp6LFnl8zNdLGxu9YAA1QvwINks4PhcElQSvqcyVLLD9aMhXd13uQjoXtEKNosOWaZqXgel0g==" 
+        crossorigin="anonymous" 
+        referrerpolicy="no-referrer" 
+    >
+    <link 
+        rel="stylesheet" 
+        href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" 
+        integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" 
+        crossorigin="anonymous" 
+        referrerpolicy="no-referrer" 
+    >
     <link rel="stylesheet" href="../../css/style.css">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link 
@@ -52,8 +59,9 @@
         <section class="sect1">
             <div class="sect1_left">
                 <h1 style="color: #F9FAF8;">这个网站很棒</h1>
-                <p>这网站主要标题下方包含一些附属文章, 
-                    文字尺寸较小, 颜色对比也比较低调。
+                <p>这网站主要标题下方包含一些附属文章,<br>
+                   文字尺寸较小, 颜色对比也比较低调。<br>
+                   (此网页只适用于书桌电脑, 并非响应式网页设计)
                 </p>
                 <button>订阅</button>
             </div>
@@ -139,8 +147,10 @@
                 </li>
             </ul>
         </div>
-        <div class="copyright">
-            <p>版权所有 &copy; Clémence TAN, 2023 (此网页为 Brainnest CSS 功课而写)</p><br>
+        <div id="copyright">
+            <p>版权所有 &copy;<br>
+               Clémence TAN, 2023<br>
+               (此网页为 Brainnest CSS 功课而写)</p>
         </div>
         <div>
             <a 
@@ -154,7 +164,7 @@
 </body>
 </html>
 
-<!-- https://css-clem.netlify.app/ -->
+<!-- https://links-and-images-clem.netlify.app/ -->
 <!-- header logo img: 20x20 -->
 <!-- mini pic: 60x60 -->
 <!-- info pages square pic: <head><link> 120x120 -->
