--- a/pages/zh_tw/tw.html
+++ b/pages/zh_tw/tw.html
@@ -5,17 +5,23 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link 
-          rel="stylesheet" 
-          href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css" 
-          integrity="sha512-KfkfwYDsLkIlwQp6LFnl8zNdLGxu9YAA1QvwINks4PhcElQSvqcyVLLD9aMhXd13uQjoXtEKNosOWaZqXgel0g==" 
-          crossorigin="anonymous" 
-          referrerpolicy="no-referrer" 
-    />
+        rel="stylesheet" 
+        href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css" 
+        integrity="sha512-KfkfwYDsLkIlwQp6LFnl8zNdLGxu9YAA1QvwINks4PhcElQSvqcyVLLD9aMhXd13uQjoXtEKNosOWaZqXgel0g==" 
+        crossorigin="anonymous" 
+        referrerpolicy="no-referrer" 
+    >
+    <link 
+        href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" 
+        rel="stylesheet" 
+        integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" 
+        crossorigin="anonymous"
+    >
     <link rel="stylesheet" href="../../css/style.css">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link 
-          href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,400;0,700;0,900;1,300&display=swap" 
-          rel="stylesheet"
+        href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,400;0,700;0,900;1,300&display=swap" 
+        rel="stylesheet"
     >
     <title>CSS 功課 (繁體中文)</title>
     <link rel="shortcut icon" href="../../images/first_img.png" type="image/png">
@@ -52,8 +58,9 @@
         <section class="sect1">
             <div class="sect1_left">
                 <h1 style="color: #F9FAF8;">這個網站很棒</h1>
-                <p>這網站主要標題下方包含一些附屬文章, 
-                   文字尺寸較小, 顏色對比也比較低調。
+                <p>這網站主要標題下方包含一些附屬文章,<br>
+                   文字尺寸較小, 顏色對比也比較低調。<br>
+                   (此網頁只適用於書桌電腦, 並非響應式網頁設計)<br>
                 </p>
                 <button>訂閱</button>
             </div>
@@ -139,8 +146,10 @@
                 </li>
             </ul>
         </div>
-        <div class="copyright">
-            <p>版權所有 &copy; Clémence TAN, 2023 (此網頁為 Brainnest CSS 功課而寫)</p><br>
+        <div id="copyright">
+            <p>版權所有 &copy;<br>
+               Clémence TAN, 2023<br>
+               (此網頁為 Brainnest CSS 功課而寫)</p>
         </div>
         <div>
             <a 
@@ -154,7 +163,7 @@
 </body>
 </html>
 
-<!-- https://css-clem.netlify.app/ -->
+<!-- https://links-and-images-clem.netlify.app/ -->
 <!-- header logo img: 20x20 -->
 <!-- mini pic: 60x60 -->
 <!-- info pages square pic: <head><link> 120x120 -->
